@@ -1,6 +1,8 @@
 2008-12-01  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tdbcodbc.c (ConfigureConnection): Added '-timeout' option.
+	* tests/tdbcodbc.test (tdbc::odbc-19.[789]): Added rudimentary
+	configuration tests.
 	
 2008-11-30  Kevin B. Kenny  <kennykb@acm.org>
 
